fix: 보드 계층구조 조회 응답값에 사용자 생성 보드 미조회 문제 해결